--- a/python_basic/12_health_chatbot/01.ipynb
+++ b/python_basic/12_health_chatbot/01.ipynb
@@ -1308,8 +1308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "6c189150-0188-4561-b29b-cc03c4396c43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('12_health_chatbot/wellness_dataset.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1a7d748-b910-4874-81e7-c31991681dee",
    "metadata": {},
    "outputs": [],
    "source": []
